Fix express serving static files

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,8 +4,10 @@ html
         link(rel="preconnect" href="https://fonts.googleapis.com")
         link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap" rel="stylesheet")   
-        link(rel='stylesheet' href='/styles/stlyes.css')
-        script(defer, src="/scripts/script.js")
+        link(rel='stylesheet' href='styles/styles.css')
+        script(defer, src="scripts/script.js")
+        title 130 Lights
+        meta(name="theme-color" content="#403d52")
     body 
         div.side-panel
             h1 Lights
