--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,7 @@ html
                 select#optionSelect
                     each op in options
                         option(data-settings=op.settings, data-name=op.name, value=op.name)=op.name
-                h1#selectedTitle
+                h1#selectedTitle Show Off
                 div.input-section#brightnessSection
                     h2 Brightness
                     input(type="range" min="25" max="250" value="200" step="25")#brightnessInput
