--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -145,7 +145,9 @@ input[type="color"] {
 .render-btn:hover {
     filter:hue-rotate(15deg);
 }
-
+.hidden {
+    display:none;
+}
 @media all and (min-width:767px) {
     #optionList, .side-panel hr {
         display:block;
@@ -167,7 +169,6 @@ input[type="color"] {
         width:100%;
         padding: 0.65rem 0 0.65rem 1rem;
         cursor: pointer;
-        transition:background-color 0.1s;
         box-sizing: border-box;
     }
     .option:hover {
@@ -177,8 +178,8 @@ input[type="color"] {
     .option.selected {
         padding: 0.65rem 0 0.65rem 0.5rem;
         margin-left:0.5rem;
-        border-bottom-left-radius: 3px;
-        border-top-left-radius: 3px;
+        border-bottom-left-radius: 5px;
+        border-top-left-radius: 5px;
         background-color: var(--color-light);
         color:var(--color-dark);
     }
