--- a/views/index.pug
+++ b/views/index.pug
@@ -34,4 +34,5 @@ html
                     h2 Color
                     input(type="color" value="#74BCFF")#colorInput
             div.bottom-content
-                button.render-btn#render Render
+                button.render-btn#renderBtn Render
+                button.off-btn#offBtn Turn Off
