Update page title

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ html
         link(href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap" rel="stylesheet")   
         link(rel='stylesheet' href='styles/styles.css')
         script(defer, src="scripts/script.js")
-        title 130 Lights
+        title Bed Lights
         meta(name="theme-color" content="#403d52")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
